--- a/produtos.html
+++ b/produtos.html
@@ -5,17 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>produtos-barbearia alura</title>
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="produtos.css">
 </head>
 <body>
     <header>
         <img src="logo.png" alt="">
-        <ul>
-            <li><a href="index.html">home</a> </li>
-            <li><a href="produtos.html">produtos</a> </li>
-            <li><a href="contato.html">contatos</a> </a> </li>
-
-        </ul>
+        <nav>
+            <ul>
+                <li><a href="index.html">home</a> </li>
+                <li><a href="produtos.html">produtos</a> </li>
+                <li><a href="contato.html">contatos</a> </a> </li>
+    
+            </ul>
+        </nav>
+       
     </header>
 
 </body>
