--- a/produtos.html
+++ b/produtos.html
@@ -5,12 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>produtos-barbearia alura</title>
-    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="produtos.css">
+    <link rel="stylesheet" href="reset.css">
+   
 </head>
 <body>
     <header>
-        <img src="logo.png" alt="">
+       <div class="caixa"> 
+        <h1>
+            <img src="logo.png" alt="">
+        </h1> 
         <nav>
             <ul>
                 <li><a href="index.html">home</a> </li>
@@ -19,7 +23,7 @@
     
             </ul>
         </nav>
-       
+       </div>
     </header>
 
 </body>
