--- a/produtos.html
+++ b/produtos.html
@@ -1,30 +1,49 @@
 <!DOCTYPE html>
-<html lang="pr-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>produtos-barbearia alura</title>
-    <link rel="stylesheet" href="produtos.css">
-    <link rel="stylesheet" href="reset.css">
-   
-</head>
-<body>
-    <header>
-       <div class="caixa"> 
-        <h1>
-            <img src="logo.png" alt="">
-        </h1> 
-        <nav>
-            <ul>
-                <li><a href="index.html">home</a> </li>
-                <li><a href="produtos.html">produtos</a> </li>
-                <li><a href="contato.html">contatos</a> </a> </li>
-    
-            </ul>
-        </nav>
-       </div>
-    </header>
+<html>
+	<head>
+		<meta charset="UTF-8">
+		<title>Produtos - Barbearia Alura</title>
+		<link rel="stylesheet" href="reset.css">
+		<link rel="stylesheet" href="produtos.css">
+		
+	</head>
+	<body>
+		<header>
+			<div class="caixa">
+				<h1><img src="logo.png"></h1>
 
-</body>
+				<nav>
+					<ul>
+						<li><a href="index.html">Home</a></li>
+						<li><a href="produtos.html">Produtos</a></li>
+						<li><a href="contato.html">Contato</a></li>
+					</ul>
+				</nav>
+			</div>
+			
+		</header>
+		<main>
+			<ul class="produtos">
+				<li>
+					<h2>Cabelo</h2>
+					<img src="cabelo.jpg" alt="">
+					<p>Na tesoura ou na máquina, como o cliente preferir</p>
+					<p>R$25,00
+					</p>
+				</li>
+				<li>
+					<h2>Barba</h2>
+					<img src="barba.jpg" alt="">
+					<p>Corte e desenho profissional de barba</p>
+					<p>R$18,00</p>
+				</li>
+				<li>
+					<h2>Cabelo+Barba</h2>
+					<img src="cabelo+barba.jpg" alt="">
+					<p>Pacote completo de cabelo e barba</p>
+					<p>R$35,00</p>
+				</li>
+			</ul>
+		</main>
+	</body>
 </html>
