--- a/produtos.html
+++ b/produtos.html
@@ -28,20 +28,19 @@
 					<h2>Cabelo</h2>
 					<img src="cabelo.jpg" alt="">
 					<p>Na tesoura ou na máquina, como o cliente preferir</p>
-					<p>R$25,00
-					</p>
+					<p class="produtos-preco">R$25,00</p>
 				</li>
 				<li>
 					<h2>Barba</h2>
 					<img src="barba.jpg" alt="">
 					<p>Corte e desenho profissional de barba</p>
-					<p>R$18,00</p>
+					<p class="produtos-preco">R$18,00</p>
 				</li>
 				<li>
 					<h2>Cabelo+Barba</h2>
 					<img src="cabelo+barba.jpg" alt="">
 					<p>Pacote completo de cabelo e barba</p>
-					<p>R$35,00</p>
+					<p class="produtos-preco">R$35,00</p>
 				</li>
 			</ul>
 		</main>
