--- a/produtos.html
+++ b/produtos.html
@@ -1,10 +1,11 @@
+
 <!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="UTF-8">
 		<title>Produtos - Barbearia Alura</title>
 		<link rel="stylesheet" href="reset.css">
-		<link rel="stylesheet" href="produtos.css">
+		<link rel="stylesheet" href="style.css">
 		
 	</head>
 	<body>
@@ -44,5 +45,9 @@
 				</li>
 			</ul>
 		</main>
+		<footer>
+			<img src="logo-branco.png" alt="">
+			<p>&copy; Copyright - Criado por Carla Dutra 2023 </p>
+		</footer>
 	</body>
 </html>
