--- a/contato.html
+++ b/contato.html
@@ -29,7 +29,21 @@
 			<label for="telefone">Telefone</label>
 			<input type="text" id="telefone">
 
+			<label>como prefere o nosso contato?</label>
+
+			<input type="radio" value="email"
+			id="email-radio" name="contato" name="contato">
+			<label for="email-radio">email</label>
+
+			<input type="radio" value="ligaçao" id="ligaçao" name="contato">
+			<label for="ligaçao">ligaçao</label>
+
+			<input type="radio" value="whatsapp"
+			id="whatsapp-radio" name="contato">
+			<label for="whatapp">whatsapp</label>
+
 			<input type="submit" value="Clique aqui!!">
+
 
 		</form>
 	</main>
