--- a/contato.html
+++ b/contato.html
@@ -21,13 +21,15 @@
 	<main>
 		<form action="">
 			<label for="nomesobrenome">Nome e Sobrenome</label>
-			<input type="text" id="nomesobrenome">
+			<input type="text" id="nomesobrenome" class="input-padrao">>
+			
 
 			<label for="email">Email</label>
-			<input type="text" id="email">
+			<input type="text" id="email" class="input-padrao">>
 
 			<label for="telefone">Telefone</label>
-			<input type="text" id="telefone">
+			<input type="text" id="telefone" class="input-padrao">
+			>
 
 			<label>como prefere o nosso contato?</label>
 
@@ -35,8 +37,8 @@
 			id="email-radio" name="contato" name="contato">
 			<label for="email-radio">email</label>
 
-			<input type="radio" value="ligaçao" id="ligaçao" name="contato">
-			<label for="ligaçao">ligaçao</label>
+			
+			<label for="ligaçao"><input type="radio" value="ligaçao" id="ligaçao" name="contato">ligaçao</label>
 
 			<input type="radio" value="whatsapp"
 			id="whatsapp-radio" name="contato">
